--- a/org.globaltester.lib.bctls/.classpath
+++ b/org.globaltester.lib.bctls/.classpath
@@ -2,7 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/bctls-jdk15on-158.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/bcprov-jdk15on-158.jar"/>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="lib/bcprov-jdk15on-159.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bcpkix-jdk15on-159.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/bctls-jdk15on-159.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
